[package]
name = "hello-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = {version = "0.7.1", features = ["macros"]}
httpc-test = "0.1.8"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "^1"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10"
